Set up Maven wrapper, Git configuration, and project basics
This commit adds Maven wrapper files for build consistency, a `.gitignore` for project-specific ignored files, and `.gitattributes` for line ending normalization. It also initializes basic project structure, including application properties, a sample `PickUp` model, and logging configuration.